# pt_base_1

./: package.json  symbols.csv  vercel.json
adf_test/: Cargo.toml
adf_test/src/: lib.rs
api/: adf-test.py
app/: layout.tsx
app/api/adf-proxy/: route.ts
components/: Layout.tsx
lib/: indexedDB.js
pages/: _app.tsx  backtest-kalman.tsx  backtest-spread.tsx  backtest.tsx  download.tsx  index.js  index.tsx  pair-analyzer.tsx  pricing.tsx  scanner.tsx
public/wasm/: adf_test.d.ts  adf_test.js  adf_test_bg.wasm  adf_test_bg.wasm.d.ts
public/wasm/adf_test_pkg/: adf_critical_values.json  adf_test.d.ts  adf_test.js  adf_test_bg.wasm  adf_test_bg.wasm.d.ts
public/workers/: adf-worker.js  calculations-worker.js  common-utils.js  euclidean-worker.js  kalman-worker.js  ols-worker.js  ratio-calculations-worker.js  ratio-worker.js
scripts/: adf_backend.py  requirements.txt
styles/: globals.css
utils/: calculations.js
