[package]
name = "adf_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["netlib"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s" # Optimize for size
