[package]
name = "adf_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
ndarray = { version = "0.15.6", features = ["approx"] }
nalgebra = "0.32.5" # Added for matrix inversion
linfa = "0.7.1"
linfa-linear = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] } # Explicitly add getrandom with 'js' feature

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s" # Optimize for size
